docs: fix horizontal scrolling issues on desktop and mobile

--- a/docs/custom.css
+++ b/docs/custom.css
@@ -57,6 +57,11 @@ div.sphinxsidebar h3 {
 div.sphinxsidebar h1.logo-name {
     display: none;
 }
+
+div.document, div.footer {
+    width: min(100%, 1320px);
+}
+
 @media screen and (max-width: 875px) {
     div.sphinxsidebar p.logo {
         display: initial;
@@ -72,5 +77,12 @@ div.sphinxsidebar h1.logo-name {
     }
     div.sphinxsidebar {
         background-color: #555;
+    }
+    div.body {
+        min-width: 300px;
+    }
+    div.footer {
+        display: block;
+        margin: 15px auto 0px auto;
     }
 }
